# git-rebase-branches

./: README.md  pyproject.toml  tox.ini
.github/workflows/: publication.yml  validation.yml
src/: git_rebase_branches.py
tests/: test_git_rebase_branches.py
