[project]
name = "git-rebase-branches"
description = "Rebase multiple branches at once"
readme = "README.md"
license = "LGPL-2.0-or-later"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
]
dynamic = ["version"]
dependencies = [
]

[[project.authors]]
name = "David Tucker"
email = "david@tucker.name"

[project.scripts]
git-rebase-branches = "git_rebase_branches:main"

[project.urls]
homepage = "https://github.com/dmtucker/git-rebase-branches"

[build-system]
requires = ["setuptools >= 80.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = [
    "B404",  # [B404:import_subprocess] This is a git script.
    "B603",  # [B603:subprocess_without_shell_equals_true] This script wraps user input.
    "B607",  # [B607:start_process_with_partial_path] Looking up git on $PATH is a feature.
]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.format]
max-line-length = "88"

[tool.setuptools_scm]
